--- a/inventory/translations/available_translations_info.json
+++ b/inventory/translations/available_translations_info.json
@@ -137,7 +137,7 @@
 
 
 },
-      "fa-hussein-taji": {
+      "fa_hussein_taji": {
         "book": "تفسیر راستین ترجمه تیسیر کریم الرحمن",
         "author": "Hussein Taji Kal Dari",
         "displayName": "Hussein Taji Kal Dari",
