--- a/inventory/translations/available_translations_info.json
+++ b/inventory/translations/available_translations_info.json
@@ -137,8 +137,8 @@
 
 
 },
-      "fa_hussein_taji": {
-        "book": "تفسیر راستین ترجمه تیسیر کریم الرحمن",
+      "fa_islamhouse": {
+        "book": "Hussein Taji Kal Dari",
         "author": "Hussein Taji Kal Dari",
         "displayName": "Hussein Taji Kal Dari",
         "langCode": "fa",
