--- a/inventory/translations/available_translations_info.json
+++ b/inventory/translations/available_translations_info.json
@@ -137,7 +137,7 @@
 
 
 },
-      "fa_islamhouse": {
+      "fa_hussein": {
         "book": "Hussein Taji Kal Dari",
         "author": "Hussein Taji Kal Dari",
         "displayName": "Hussein Taji Kal Dari",
