--- a/inventory/translations/available_translations_info.json
+++ b/inventory/translations/available_translations_info.json
@@ -143,10 +143,10 @@
         "book": "Hussein Taji Kal Dari",
         "author": "Hussein Taji Kal Dari",
         "displayName": "Hussein Taji Kal Dari",
-        "langCode": "fr",
-        "langName": "Français",
-        "lastUpdated": 1680108109569,
-        "downloadPath": "inventory/translations/fr/fr_tafisr.json"
+        "langCode": "fa",
+        "langName": "فارسی",
+        "lastUpdated": 1678915800000,
+        "downloadPath": "inventory/translations/fa/fa_tafisr.json"
 
 
 
