--- a/inventory/translations/available_translations_info.json
+++ b/inventory/translations/available_translations_info.json
@@ -32,15 +32,11 @@
  },
  "en_hussein_taji_kal_dari": {
         "name": "Hussein Taji Kal Dari",
-        "author_name": "Hussein Taji Kal Dari",
-        "language_name": "persian",
+           "author": "Hussein Taji Kal Dari",
+        "langName": "English",
            "langCode": "en",
         "lastUpdated": 1658517131580,
-
-        "translated_name": {
-          "name": "Hussein Taji Kal Dari",
-          "language_name": "فارسی"
-                  "downloadPath": "inventory/translations/en/en_hussein.json"
+ "downloadPath": "inventory/translations/en/en_hussein.json"
 
 
 
